--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
   ],
   "license": "MIT",
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/jainish2222/learnify.git"
   },
+  "homepage": "https://github.com/jainish2222/learnify#readme",
   "bugs": {
+    "url": "https://github.com/jainish2222/learnify/issues",
     "email": "jainishkoladiya33@gmail.com"
   },
   "funding": [
